Fix spacing between post header and nav.

--- a/src/styles/templates/_post-common.scss
+++ b/src/styles/templates/_post-common.scss
@@ -5,7 +5,8 @@
     background: $g-color-grey-darker;
     color: $g-color-off-white;
     padding: 10px 20px;
-    margin-bottom: 1rem;
+    margin-bottom: 1em;
+    margin-top: 1em;
 
     & h1 {
       font-size: 1.5rem;
